Create and seed the database

--- a/PokemonReviewsApp/appsettings.json
+++ b/PokemonReviewsApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=CPC-mikek-U6I7B\\SQLEXPRESS;Initial Catalog=PokemonReviews;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
